@@ -1,3 +1,15 @@
+Thu Jan 03 11:15:40 2002  George Lebl <jirka@5z.com>
+
+	* gnome-program.[ch]:  Perform some garbage collection: Remove
+	  module-info and modules properties, they were not implemented
+	  and were not implementable, nor usable, nor used.  Remove
+	  gnome_program_get_invocation_name and
+	  gnome_program_get_short_invocation_name since those were not
+	  implemented either.  Add documentations trings to all properties.
+	  Remove construct only restriction from the app prefix properties,
+	  since it is not required and is in fact not used during
+	  construction.
+
 2002-01-03  Anders Carlsson  <andersca@gnu.org>
 
 	* gnome-program.c (gnome_program_locate_file): Plug leak.
